--- a/scss/morkborg/_morkborg.scss
+++ b/scss/morkborg/_morkborg.scss
@@ -47,6 +47,12 @@
   .editor-content {
     height: 100%;
   }
+
+  .button {
+    background: var(--foreground-color);
+    color: var(--background-color);
+    font-family: var(--h2-font);
+  }
 }
 
 .mce-content-body {
