Fix Dice Tray dialog style.

--- a/scss/morkborg.scss
+++ b/scss/morkborg.scss
@@ -12,3 +12,4 @@
 @import "morkborg/_foundry-overrides";
 @import "morkborg/_rollcards";
 @import "morkborg/_dialog";
+@import "morkborg/_module-fixes";
