--- a/css/morkborg.css
+++ b/css/morkborg.css
@@ -119,6 +119,11 @@
 .morkborg .editor-content {
   height: 100%;
 }
+.morkborg .button {
+  background: var(--foreground-color);
+  color: var(--background-color);
+  font-family: var(--h2-font);
+}
 
 .mce-content-body {
   overflow-wrap: break-word;
@@ -188,12 +193,10 @@
   color: var(--foreground-color);
   font-family: var(--item-font);
   font-size: 14px;
+  padding: 0 8px;
 }
 .morkborg.sheet .tox.tox-tinymce .tox-edit-area__iframe {
   background: var(--background-color);
-}
-.morkborg.sheet .editor {
-  padding: 0 8px;
 }
 .morkborg.sheet .sheet-tabs {
   flex: 0 0 30px;
@@ -1055,12 +1058,6 @@ form.editable .results .result-details input[type=text]:hover, form.editable .re
 /* ====================== */
 /* UI / Chat */
 /* ====================== */
-.morkborg .button {
-  background: var(--foreground-color);
-  color: var(--background-color);
-  font-family: var(--h2-font);
-}
-
 #chat-controls {
   color: var(--foreground-color);
 }
@@ -1510,6 +1507,23 @@ a.entity-link, a.inline-roll {
 
 .scvm-dialog .class-name {
   text-transform: capitalize;
+}
+
+.window-app .window-content textarea {
+  color: var(--foreground-color);
+  background: var(--background-color);
+  border: 2px solid #252525;
+}
+.window-app .window-content textarea:hover {
+  box-shadow: 0 0 10px var(--highlight-background-color);
+}
+.window-app .window-content textarea:focus {
+  box-shadow: 0 0 10px var(--highlight-background-color);
+  outline: none;
+}
+
+button.dice-calculator--button {
+  color: var(--foreground-color);
 }
 
 /*# sourceMappingURL=morkborg.css.map */
