Change bg color on world-config editor so black text is visible.

--- a/css/morkborg.css
+++ b/css/morkborg.css
@@ -1357,6 +1357,10 @@ a.entity-link, a.inline-roll {
   word-break: break-all;
 }
 
+#world-config .window-content .editor {
+  background: #d8d8cc;
+}
+
 /* ====================== */
 /* Roll Cards */
 /* ====================== */
