Added weapon critOn and fumbleOn fields to allow increase critical/fumble natural roll range.

--- a/templates/item/weapon-sheet.html
+++ b/templates/item/weapon-sheet.html
@@ -108,6 +108,28 @@
           {{/each}} {{/select}}
         </select>
       </div>
+
+      <div class="form-group">
+        <label>{{ localize "MB.ItemCritOn" }}:</label>
+        <input
+          type="text"
+          name="data.critOn"
+          value="{{data.data.critOn}}"
+          placeholder="20"
+          data-dtype="Number"
+        />
+      </div>
+
+      <div class="form-group">
+        <label>{{ localize "MB.ItemFumbleOn" }}:</label>
+        <input
+          type="text"
+          name="data.fumbleOn"
+          value="{{data.data.fumbleOn}}"
+          placeholder="1"
+          data-dtype="Number"
+        />
+      </div>
     </div>
   </section>
 </form>
