--- a/css/morkborg.css
+++ b/css/morkborg.css
@@ -1509,6 +1509,7 @@ a.entity-link, a.inline-roll {
   text-shadow: 0 0 10px var(--highlight-background-color);
 }
 
+.allowed-scvm-classes-dialog .class-name,
 .scvm-dialog .class-name {
   text-transform: capitalize;
 }
