Add drag and drop container to follower, character and container. Refactor the data preparation for actors

--- a/scss/morkborg/_actor-sheet.scss
+++ b/scss/morkborg/_actor-sheet.scss
@@ -58,6 +58,7 @@
       .item-controls .item-toggle {
         color: darkgray;
 
+        &.carried,
         &.equipped {
           color: var(--highlight-background-color);
         }
