--- a/css/morkborg.css
+++ b/css/morkborg.css
@@ -299,7 +299,7 @@
 .morkborg.sheet.actor .sheet-body .item-controls .item-toggle {
   color: darkgray;
 }
-.morkborg.sheet.actor .sheet-body .item-controls .item-toggle.equipped {
+.morkborg.sheet.actor .sheet-body .item-controls .item-toggle.carried, .morkborg.sheet.actor .sheet-body .item-controls .item-toggle.equipped {
   color: var(--highlight-background-color);
 }
 .morkborg.sheet.actor .sheet-body .violence-tab div.initiative {
@@ -714,8 +714,9 @@
   align-items: center;
 }
 .morkborg .items-list .items-header > * {
-  font-size: 12px;
-  text-align: center;
+  font-size: 16px;
+  text-align: right;
+  padding-right: 6px;
 }
 .morkborg .items-list .items-header .item-name {
   /*padding-left: 5px;*/
@@ -731,13 +732,16 @@
 .morkborg .item-list .item {
   min-height: 30px;
   line-height: 24px;
-  padding: 3px 0;
+  padding: 3px 3px 3px 0;
   border-bottom: 1px solid #7a7971;
   align-items: stretch;
 }
 .morkborg .item-list .item img {
   flex: 0 0 24px;
   margin-right: 5px;
+}
+.morkborg .item-list .item.item-container-item {
+  padding-left: 29px;
 }
 .morkborg .item-list .item-name {
   margin: 0;
@@ -767,6 +771,13 @@
 .morkborg .item-list .item-controls {
   flex: 0 0 70px;
   text-align: right;
+  display: flex;
+  justify-content: flex-end;
+}
+.morkborg .item-list .item-controls .item-control {
+  width: 17px;
+  margin-left: 3px;
+  text-align: center;
 }
 .morkborg .item-list .item-button {
   background-color: var(--foreground-color);
