--- a/scss/morkborg/_item-list.scss
+++ b/scss/morkborg/_item-list.scss
@@ -6,8 +6,9 @@
     align-items: center;
 
     > * {
-      font-size: 12px;
-      text-align: center;
+      font-size: 16px;
+      text-align: right;
+      padding-right: 6px;
     }
 
     .item-name {
@@ -26,13 +27,17 @@
     .item {
       min-height: 30px;
       line-height: 24px;
-      padding: 3px 0;
+      padding: 3px 3px 3px 0;
       border-bottom: 1px solid #7a7971;
       align-items: stretch;
 
       img {
         flex: 0 0 24px;
         margin-right: 5px;
+      }
+
+      &.item-container-item {
+        padding-left: 29px;
       }
     }
 
@@ -68,6 +73,13 @@
     .item-controls {
       flex: 0 0 70px;
       text-align: right;
+      display: flex;
+      justify-content: flex-end;
+      .item-control {
+        width: 17px;
+        margin-left: 3px;
+        text-align: center;
+      }
     }
 
     .item-button {
