Show empty container help text.

--- a/css/morkborg.css
+++ b/css/morkborg.css
@@ -796,6 +796,9 @@
 .morkborg .item-list .unequipped {
   color: gray;
 }
+.morkborg .item-list .empty-container {
+  text-align: center;
+}
 
 .morkborg.sheet.actor.creature .sheet-header {
   display: flex;
