--- a/templates/actor/common/actor-equipment-list.html
+++ b/templates/actor/common/actor-equipment-list.html
@@ -16,48 +16,48 @@
     <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
     <h4 class="item-name item-edit rollable">
       {{item.name}} {{#ifEq item.type 'container'}}
-      ({{item.data.totalContainerSpace}} / {{item.data.capacity}}){{/ifEq}}
+      ({{item.data.totalContainerSpace}} / {{item.data.capacity}}) {{/ifEq}}
       {{#ifGt item.data.quantity 1}} ({{item.data.quantity}}) {{/ifGt}}
     </h4>
     <div class="item-buttons"></div>
     <div class="item-controls">
-      {{#ifEq item.type 'misc'}}
+      {{#if item.data.canPlusMinus}}
       <a class="item-control item-qty-plus" title="Add Quantity"
         ><i class="fas fa-plus"></i
       ></a>
       <a class="item-control item-qty-minus" title="Subtract Quantity"
         ><i class="fas fa-minus"></i
       ></a>
-      {{/ifEq}} {{#ifNe disableCarryAndEquipButton true}} {{#if
+      {{/if}} {{#ifNe disableCarryAndEquipButton true}} {{#if
       item.data.equippable}}
       <a
         class="item-control item-toggle item-toggle-equipped {{ifPrint item.data.equipped 'equipped'}}"
         title="{{ifPrintElse item.data.equipped (localize 'MB.ItemEquipped') (localize 'MB.ItemUnequipped')}}"
-        ><i class="fas fa-shield-alt"></i
+      >
+        <i class="fas fa-shield-alt"></i
       ></a>
       {{/if}} {{#if item.data.droppable}}
       <a
         class="item-control item-toggle item-toggle-carried {{ifPrint item.data.carried 'carried'}}"
         title="{{ifPrintElse item.data.carried (localize 'MB.ItemCarried') (localize 'MB.ItemDropped')}}"
       >
-        <i class="fas fa-user-check"></i>
-      </a>
-      {{/if}} {{/ifNe}}
-      <a class="item-control item-edit" title="Edit Item"
-        ><i class="fas fa-edit"></i
+        <i class="fas fa-user-check"></i
       ></a>
-      <a class="item-control item-delete" title="Delete Item"
-        ><i class="fas fa-trash"></i
+      {{/if}} {{/ifNe}}
+      <a class="item-control item-edit" title="Edit Item">
+        <i class="fas fa-edit"></i
+      ></a>
+      <a class="item-control item-delete" title="Delete Item">
+        <i class="fas fa-trash"></i
       ></a>
     </div>
   </li>
-
-  {{#ifEq item.type 'container'}} {{#each item.data.itemsData as |item|}} {{>
-  item-row item=item class="item-container-item"
-  disableCarryAndEquipButton=true}}{{else}}
+  {{/inline}} {{#each data.data.equipment as |item id|}} {{> item-row
+  item=item}} {{#ifEq item.type 'container'}} {{#each item.data.itemsData as
+  |item|}} {{> item-row item=item class="item-container-item"
+  disableCarryAndEquipButton=true}} {{else}}
   <li class="item empty-container" data-item-id="{{item._id}}">
     <div class="rule-text">{{localize 'MB.ContainerEmptyHelpText'}}</div>
   </li>
-  {{/each}} {{/ifEq}} {{/inline}} {{#each data.data.equipment as |item id|}} {{>
-  item-row item=item}}{{/each}}
+  {{/each}} {{/ifEq}} {{/each}}
 </ol>
