Add world setting to control ammo tracking.

--- a/templates/actor/character-sheet.html
+++ b/templates/actor/character-sheet.html
@@ -277,7 +277,8 @@
             />
             <div class="weapon-name-col">
               <h4 class="item-name item-edit rollable">{{item.name}}</h4>
-              {{#ifEq item.data.weaponType "ranged"}}
+              {{#if ../data.data.trackAmmo}} {{#ifEq item.data.weaponType
+              "ranged"}}
               <div class="ammo-select-col">
                 <select
                   class="ammo-select"
@@ -294,7 +295,7 @@
                   {{/each}} {{/select}}
                 </select>
               </div>
-              {{/ifEq}}
+              {{/ifEq}} {{/if}}
             </div>
             <div class="item-fields">
               <span class="item-field damage-die">{{item.data.damageDie}}</span>
