Fix v10 warnings in actor sheets.

--- a/templates/actor/container-sheet.html
+++ b/templates/actor/container-sheet.html
@@ -27,9 +27,9 @@
         <span class="stat-label container-label"
           >{{ localize "MB.ContainerHolding" }}:</span
         >
-        <span class="stat-value">{{data.data.containerSpace}}</span>
+        <span class="stat-value">{{data.system.containerSpace}}</span>
         /
-        <span class="stat-value">{{data.data.capacity.max}}</span>
+        <span class="stat-value">{{data.system.capacity.max}}</span>
       </div>
     </div>
   </header>
@@ -47,8 +47,8 @@
   <section class="sheet-body">
     {{!-- Description Tab --}}
     <div class="tab" data-group="primary" data-tab="description">
-      {{editor content=data.data.description target="data.description"
-      button=true owner=owner editable=true}}
+      {{editor data.system.description target="system.description" button=true
+      owner=owner editable=true}}
     </div>
 
     {{!-- Details Tab --}}
@@ -57,8 +57,8 @@
         <label>{{ localize "MB.ItemPrice" }}:</label>
         <input
           type="text"
-          name="data.price"
-          value="{{data.data.price}}"
+          name="system.price"
+          value="{{data.system.price}}"
           placeholder="2"
           data-dtype="Number"
         />
@@ -66,9 +66,9 @@
       <div class="form-group">
         <label>{{ localize "MB.ItemCapacity" }}:</label>
         <input
-          name="data.capacity.max"
+          name="system.capacity.max"
           type="text"
-          value="{{data.data.capacity.max}}"
+          value="{{data.system.capacity.max}}"
           placeholder="10"
           data-dtype="Number"
         />
