--- a/templates/item/container-sheet.html
+++ b/templates/item/container-sheet.html
@@ -1,52 +1,18 @@
 <form class="flexcol {{cssClass}}" autocomplete="off">
-  {{!-- Sheet Header --}}
-  <header class="sheet-header flexrow">
-    <img
-      class="profile-img"
-      src="{{item.img}}"
-      title="{{item.name}}"
-      data-edit="img"
-    />
-    <div class="header-details">
-      <h1 class="item-name">
-        <input
-          name="name"
-          type="text"
-          value="{{item.name}}"
-          placeholder="{{ localize 'MB.ItemName' }}"
-        />
-      </h1>
-      <div class="item-subtitle">
-        <h4 class="item-type">{{item.type}}</h4>
-      </div>
-    </div>
-  </header>
+  {{> systems/morkborg/templates/item/common/sheet-header.html }} {{>
+  systems/morkborg/templates/item/common/sheet-tabs.html }}
 
-  {{!-- Sheet Tab Navigation --}}
-  <nav class="sheet-tabs tabs" data-group="primary">
-    <a class="item" data-tab="description"
-      >{{ localize "MB.TabDescription" }}</a
-    >
-    <a class="item" data-tab="details">{{ localize "MB.TabDetails" }}</a>
-  </nav>
-
-  {{!-- Sheet Body --}}
   <section class="sheet-body">
-    {{!-- Description Tab --}}
-    <div class="tab" data-group="primary" data-tab="description">
-      {{editor content=data.data.description target="data.description"
-      button=true owner=owner editable=true}}
-    </div>
-
-    {{!-- Details Tab --}}
+    {{> systems/morkborg/templates/item/common/description-tab.html }} {{!--
+    Details Tab --}}
     <div class="tab" data-group="primary" data-tab="details">
       {{!-- Price --}}
       <div class="form-group">
         <label>{{ localize "MB.ItemPrice" }}:</label>
         <input
           type="text"
-          name="data.price"
-          value="{{data.data.price}}"
+          name="system.price"
+          value="{{data.system.price}}"
           placeholder="2"
           data-dtype="Number"
         />
@@ -57,8 +23,8 @@
         <label>{{ localize "MB.CarryWeight" }}:</label>
         <input
           type="text"
-          name="data.carryWeight"
-          value="{{data.data.carryWeight}}"
+          name="system.carryWeight"
+          value="{{data.system.carryWeight}}"
           placeholder="1"
           data-dtype="Number"
         />
@@ -69,8 +35,8 @@
         <label>{{ localize "MB.ItemCapacity" }}:</label>
         <input
           type="text"
-          name="data.capacity"
-          value="{{data.data.capacity}}"
+          name="system.capacity"
+          value="{{data.system.capacity}}"
           placeholder="1d4"
           data-dtype="Number"
         />
