--- a/templates/item/misc-sheet.html
+++ b/templates/item/misc-sheet.html
@@ -1,92 +1,13 @@
 <form class="flexcol {{cssClass}}" autocomplete="off">
-  {{!-- Sheet Header --}}
-  <header class="sheet-header flexrow">
-    <img
-      class="profile-img"
-      src="{{item.img}}"
-      title="{{item.name}}"
-      data-edit="img"
-    />
-    <div class="header-details">
-      <h1 class="item-name">
-        <input
-          name="name"
-          type="text"
-          value="{{item.name}}"
-          placeholder="{{ localize 'MB.ItemName' }}"
-        />
-      </h1>
-      <div class="item-subtitle">
-        <h4 class="item-type">{{item.type}}</h4>
-      </div>
-    </div>
-  </header>
+  {{> systems/morkborg/templates/item/common/sheet-header.html }} {{>
+  systems/morkborg/templates/item/common/sheet-tabs.html }}
 
-  {{!-- Sheet Tab Navigation --}}
-  <nav class="sheet-tabs tabs" data-group="primary">
-    <a class="item" data-tab="description"
-      >{{ localize "MB.TabDescription" }}</a
-    >
-    <a class="item" data-tab="details">{{ localize "MB.TabDetails" }}</a>
-  </nav>
-
-  {{!-- Sheet Body --}}
   <section class="sheet-body">
-    {{!-- Description Tab --}}
-    <div class="tab" data-group="primary" data-tab="description">
-      {{editor content=data.data.description target="data.description"
-      button=true owner=owner editable=true}}
-    </div>
-
-    {{!-- Details Tab --}}
+    {{> systems/morkborg/templates/item/common/description-tab.html }} {{!--
+    Details Tab --}}
     <div class="tab" data-group="primary" data-tab="details">
-      {{!-- Price --}}
-      <div class="form-group">
-        <label>{{ localize "MB.ItemPrice" }}:</label>
-        <input
-          type="text"
-          name="data.price"
-          value="{{data.data.price}}"
-          placeholder="2"
-          data-dtype="Number"
-        />
-      </div>
-
-      {{!-- Carry weight --}}
-      <div class="form-group">
-        <label>{{ localize "MB.CarryWeight" }}:</label>
-        <input
-          type="text"
-          name="data.carryWeight"
-          value="{{data.data.carryWeight}}"
-          placeholder="1"
-          data-dtype="Number"
-        />
-      </div>
-
-      {{!-- Container space --}}
-      <div class="form-group">
-        <label>{{ localize "MB.ContainerSpace" }}:</label>
-        <input
-          type="text"
-          name="data.containerSpace"
-          value="{{data.data.containerSpace}}"
-          placeholder="1"
-          data-dtype="Number"
-        />
-      </div>
-
-      {{!-- Quantity --}}
-      <div class="form-group">
-        <label>{{ localize "MB.Quantity" }}:</label>
-        <input
-          type="text"
-          name="data.quantity"
-          value="{{data.data.quantity}}"
-          placeholder="1"
-          data-dtype="Number"
-        />
-      </div>
+      {{> systems/morkborg/templates/item/common/base-fields.html }} {{>
+      systems/morkborg/templates/item/common/quantity-field.html }}
     </div>
   </section>
 </form>
