--- a/templates/actor/follower-sheet.html
+++ b/templates/actor/follower-sheet.html
@@ -60,8 +60,8 @@
   <section class="sheet-body">
     {{!-- Description Tab --}}
     <div class="tab" data-group="primary" data-tab="description">
-      {{editor content=data.data.description target="data.description"
-      button=true owner=owner editable=true}}
+      {{editor data.system.description target="system.description" button=true
+      owner=owner editable=true}}
     </div>
 
     {{!-- Details Tab --}}
@@ -70,9 +70,9 @@
       <div class="form-group">
         <label>{{ localize "MB.Morale" }}:</label>
         <input
-          name="data.morale"
+          name="system.morale"
           type="text"
-          value="{{data.data.morale}}"
+          value="{{data.system.morale}}"
           placeholder="10"
           data-dtype="Number"
         />
@@ -83,8 +83,8 @@
         <label>{{ localize "MB.FollowerTrait" }}:</label>
         <input
           type="text"
-          name="data.trait"
-          value="{{data.data.trait}}"
+          name="system.trait"
+          value="{{data.system.trait}}"
           placeholder="None"
           data-dtype="String"
         />
@@ -95,8 +95,8 @@
         <label>{{ localize "MB.FollowerSpeciality" }}:</label>
         <input
           type="text"
-          name="data.speciality"
-          value="{{data.data.speciality}}"
+          name="system.speciality"
+          value="{{data.system.speciality}}"
           placeholder="None"
           data-dtype="String"
         />
@@ -107,224 +107,16 @@
         <label>{{ localize "MB.FollowerValue" }}:</label>
         <input
           type="text"
-          name="data.value"
-          value="{{data.data.value}}"
+          name="system.value"
+          value="{{data.system.value}}"
           placeholder="None"
           data-dtype="String"
         />
       </div>
     </div>
 
-    {{!-- Violence Tab --}}
-    <div class="tab violence-tab" data-group="primary" data-tab="violence">
-      <div class="initiative">
-        <span class="roll-initiative"
-          >{{localize "MB.Roll"}} {{localize "MB.Initiative"}}:</span
-        >
-        <button
-          type="button"
-          class="button item-button rollable initiative-button party-initiative-button"
-          title="{{localize 'MB.Party'}}"
-        >
-          {{localize "MB.Party"}}
-        </button>
-        <button
-          type="button"
-          class="button item-button rollable initiative-button individual-initiative-button"
-          title="{{localize 'MB.IndividualI'}}"
-        >
-          {{localize "MB.Individual"}}
-        </button>
-      </div>
-      <ol class="items-list inventory-list">
-        <li class="items-header flexrow">
-          <h3 class="item-name flexrow">
-            {{localize "MB.ItemTypeWeaponPlural"}}
-          </h3>
-        </li>
-        <ol class="item-list weapon-list">
-          {{#each data.data.equippedWeapons as |item id|}}
-          <li class="item flexrow" data-item-id="{{item._id}}">
-            <img
-              src="{{item.img}}"
-              title="{{item.name}}"
-              width="24"
-              height="24"
-            />
-            <h4 class="item-name">{{item.name}}</h4>
-            <div class="item-fields">
-              <span class="item-field handed">{{item.data.handed}}H</span>
-              <span class="item-field damage-die">{{item.data.damageDie}}</span>
-            </div>
-            <div class="item-buttons">
-              <button
-                type="button"
-                class="item-button rollable attack-button"
-                title="{{localize 'MB.Attack'}}"
-              >
-                {{localize 'MB.Attack'}}
-              </button>
-            </div>
-            <div class="item-controls">
-              <a
-                class="item-control item-toggle item-toggle-equipped {{ifPrint item.data.equipped 'equipped'}}"
-                title="{{ifPrintElse item.data.equipped (localize 'MB.ItemEquipped') (localize 'MB.ItemUnequipped')}}"
-                ><i class="fas fa-shield-alt"></i
-              ></a>
-              <a class="item-control item-edit" title="Edit Item"
-                ><i class="fas fa-edit"></i
-              ></a>
-              <a class="item-control item-delete" title="Delete Item"
-                ><i class="fas fa-trash"></i
-              ></a>
-            </div>
-          </li>
-          {{/each}}
-        </ol>
-        <div class="rule-text attack-rule">
-          {{localize 'MB.AttackCritText'}} {{localize 'MB.AttackFumbleText'}}
-        </div>
-        <div class="violence-gutter"></div>
-        <li class="items-header flexrow">
-          <h3 class="item-name flexrow">
-            {{localize "MB.ItemTypeArmorPlural"}}
-          </h3>
-          <div class="item-controls flexrow"></div>
-        </li>
-        <ol class="item-list armor-list">
-          {{#if data.data.equippedArmor}}
-          <li
-            class="item flexrow"
-            data-item-id="{{data.data.equippedArmor._id}}"
-          >
-            <img
-              src="{{data.data.equippedArmor.img}}"
-              title="{{data.data.equippedArmor.name}}"
-              width="24"
-              height="24"
-            />
-            <h4 class="item-name">{{data.data.equippedArmor.name}}</h4>
-            <div class="item-buttons">
-              <div class="armor-tiers">
-                <div class="tiers">
-                  <label class="stat-label tier-label"
-                    >{{ localize "MB.Tier" }}:</label
-                  >
-                  <ul class="tiers">
-                    <li>
-                      <label
-                        ><input class="tier-radio" type="radio"
-                        name="tier.value" value="0" {{#ifEq
-                        data.data.equippedArmor.data.tier.value
-                        0}}checked{{/ifEq}}/><span class="tier-num">0</span
-                        ><span class="tier-dmg">-0</span></label
-                      >
-                    </li>
-                    <li>
-                      <label
-                        ><input class="tier-radio" type="radio"
-                        name="tier.value" value="1" {{#ifEq
-                        data.data.equippedArmor.data.tier.value
-                        1}}checked{{/ifEq}}/><span class="tier-num">1</span
-                        ><span class="tier-dmg">-d2</span></label
-                      >
-                    </li>
-                    <li>
-                      <label
-                        ><input class="tier-radio" type="radio"
-                        name="tier.value" value="2" {{#ifEq
-                        data.data.equippedArmor.data.tier.value
-                        2}}checked{{/ifEq}} {{#ifLt
-                        data.data.equippedArmor.data.tier.max
-                        2}}disabled="true"{{/ifLt}}/><span class="tier-num"
-                          >2</span
-                        ><span class="tier-dmg">-d4</span></label
-                      >
-                    </li>
-                    <li>
-                      <label
-                        ><input class="tier-radio" type="radio"
-                        name="tier.value" value="3" {{#ifEq
-                        data.data.equippedArmor.data.tier.value
-                        3}}checked{{/ifEq}} {{#ifLt
-                        data.data.equippedArmor.data.tier.max
-                        3}}disabled="true"{{/ifLt}}/><span class="tier-num"
-                          >3</span
-                        ><span class="tier-dmg">-d6</span></label
-                      >
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="item-controls">
-              <a
-                class="item-control item-toggle item-toggle-equipped {{ifPrint data.data.equippedArmor.data.equipped 'equipped'}}"
-                title="{{ifPrintElse data.data.equippedArmor.data.equipped (localize 'MB.ItemEquipped') (localize 'MB.ItemUnequipped')}}"
-                ><i class="fas fa-shield-alt"></i
-              ></a>
-              <a class="item-control item-edit" title="Edit Item"
-                ><i class="fas fa-edit"></i
-              ></a>
-              <a class="item-control item-delete" title="Delete Item"
-                ><i class="fas fa-trash"></i
-              ></a>
-            </div>
-          </li>
-          {{/if}} {{#if data.data.equippedShield}}
-          <li
-            class="item flexrow"
-            data-item-id="{{data.data.equippedShield._id}}"
-          >
-            <img
-              src="{{data.data.equippedShield.img}}"
-              title="{{data.data.equippedShield.name}}"
-              width="24"
-              height="24"
-            />
-            <h4 class="item-name">{{data.data.equippedShield.name}}</h4>
-            <div class="item-buttons">
-              <span class="rule-text shield-rule"
-                >{{localize 'MB.ShieldUseText'}}</span
-              >
-            </div>
-            <div class="item-controls">
-              <a
-                class="item-control item-toggle item-toggle-equipped {{ifPrint data.data.equippedShield.data.equipped 'equipped'}}"
-                title="{{ifPrintElse data.data.equippedShield.data.equipped (localize 'MB.ItemEquipped') (localize 'MB.ItemUnequipped')}}"
-                ><i class="fas fa-shield-alt"></i
-              ></a>
-              <a class="item-control item-edit" title="Edit Item"
-                ><i class="fas fa-edit"></i
-              ></a>
-              <a class="item-control item-delete" title="Delete Item"
-                ><i class="fas fa-trash"></i
-              ></a>
-            </div>
-          </li>
-          {{/if}}
-        </ol>
-        <div class="underarmor-row">
-          <div class="incoming-attack">
-            <div>
-              <button
-                type="button"
-                class="item-button rollable defend-button"
-                title="{{localize 'MB.Defend'}}"
-              >
-                {{localize "MB.Defend"}}
-              </button>
-            </div>
-            <div class="rule-text defend-rule">
-              {{localize 'MB.DefendCritText'}} {{localize
-              'MB.DefendFumbleText'}}
-            </div>
-          </div>
-        </div>
-      </ol>
-    </div>
-
-    {{!-- Treasures Tab --}}
+    {{> systems/morkborg/templates/actor/violence-tab.html }} {{!-- Treasures
+    Tab --}}
     <div class="tab equipment-tab" data-group="primary" data-tab="treasures">
       <div class="equipment-top-row">
         <div class="silver">
@@ -333,16 +125,15 @@
           >
           <input
             class="stat-input silver-input"
-            name="data.silver"
+            name="system.silver"
             type="number"
-            value="{{data.data.silver}}"
+            value="{{data.system.silver}}"
             data-dtype="Number"
           />
         </div>
       </div>
       <ol class="items-list equipment-list">
-        {{>
-        "systems/morkborg/templates/actor/common/actor-equipment-list.html"}}
+        {{> "systems/morkborg/templates/actor/common/equipment-list.html"}}
       </ol>
     </div>
   </section>
